@@ -1,3 +1,8 @@
+2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b98
+
+	* Cascade rebuilding of highlight up to parent album if this
+	  album is the highlight for its parent.
+
 2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b97
 
 	* Change: More replacing of $GALLERY_BASEDIR.
